// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Molecules | Accordion Default 1`] = `
Array [
  .c5 {
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  width: 12px;
  height: 12px;
  fill: #0046FF;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  display: block;
}

.c2 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: #282823;
  margin: 0;
  font-weight: 400;
  font-size: 14px;
  line-height: 1.4285714285714286;
}

.c7 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: #6E6E69;
  margin: 0;
  font-weight: 400;
  font-size: 14px;
  line-height: 1.4285714285714286;
}

.c1 + .c0 {
  border-top: 1px solid #EBEBE8;
}

.c6 {
  padding-top: 4px;
  padding-bottom: 12px;
  padding-left: 24px;
}

.c6[hidden] {
  display: none;
}

.c3 {
  font: inherit;
  box-sizing: border-box;
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  width: 100%;
  border: 0;
  padding-top: 12px;
  padding-right: 0;
  padding-bottom: 12px;
  padding-left: 24px;
  background-color: transparent;
  cursor: pointer;
}

.c3:hover,
.c3:focus {
  background-color: #F5F5F5;
}

.c4 {
  position: absolute;
  top: 15px;
  left: 0;
}

<div
    className="c0 c1"
  >
    <h3
      className="c2"
    >
      <button
        aria-expanded={false}
        className="c3"
        onClick={[Function]}
        type="button"
      >
        <div
          className="c4"
        >
          <svg
            aria-hidden="true"
            className="c5"
            focusable="false"
            preserveAspectRatio="xMidYMid meet"
            role="presentation"
            viewBox="0 0 12 12"
          >
            <path
              d="M7.166 0v5h5v2h-5v5h-2V6.999L.166 7V5l5-.001V0h2z"
              fillRule="evenodd"
            />
          </svg>
        </div>
        Låg CO₂ risk
      </button>
    </h3>
    <div
      className="c6"
      hidden={true}
    >
      <p
        className="c7"
      >
        Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat
      </p>
    </div>
  </div>,
  .c5 {
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  width: 12px;
  height: 12px;
  fill: #0046FF;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  display: block;
}

.c2 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: #282823;
  margin: 0;
  font-weight: 400;
  font-size: 14px;
  line-height: 1.4285714285714286;
}

.c7 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: #6E6E69;
  margin: 0;
  font-weight: 400;
  font-size: 14px;
  line-height: 1.4285714285714286;
}

.c1 + .c0 {
  border-top: 1px solid #EBEBE8;
}

.c6 {
  padding-top: 4px;
  padding-bottom: 12px;
  padding-left: 24px;
}

.c6[hidden] {
  display: none;
}

.c3 {
  font: inherit;
  box-sizing: border-box;
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  width: 100%;
  border: 0;
  padding-top: 12px;
  padding-right: 0;
  padding-bottom: 12px;
  padding-left: 24px;
  background-color: transparent;
  cursor: pointer;
}

.c3:hover,
.c3:focus {
  background-color: #F5F5F5;
}

.c4 {
  position: absolute;
  top: 15px;
  left: 0;
}

<div
    className="c0 c1"
  >
    <h3
      className="c2"
    >
      <button
        aria-expanded={false}
        className="c3"
        onClick={[Function]}
        type="button"
      >
        <div
          className="c4"
        >
          <svg
            aria-hidden="true"
            className="c5"
            focusable="false"
            preserveAspectRatio="xMidYMid meet"
            role="presentation"
            viewBox="0 0 12 12"
          >
            <path
              d="M7.166 0v5h5v2h-5v5h-2V6.999L.166 7V5l5-.001V0h2z"
              fillRule="evenodd"
            />
          </svg>
        </div>
        Sustainability score
      </button>
    </h3>
    <div
      className="c6"
      hidden={true}
    >
      <p
        className="c7"
      >
        Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat
      </p>
    </div>
  </div>,
]
`;

exports[`Storyshots Molecules | Accordion With Footer 1`] = `
Array [
  .c5 {
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  width: 12px;
  height: 12px;
  fill: #0046FF;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  display: block;
}

.c2 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: #282823;
  margin: 0;
  font-weight: 400;
  font-size: 14px;
  line-height: 1.4285714285714286;
}

.c7 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: #6E6E69;
  margin: 0;
  font-weight: 400;
  font-size: 14px;
  line-height: 1.4285714285714286;
}

.c1 + .c0 {
  border-top: 1px solid #EBEBE8;
}

.c6 {
  padding-top: 4px;
  padding-bottom: 12px;
  padding-left: 24px;
}

.c6[hidden] {
  display: none;
}

.c3 {
  font: inherit;
  box-sizing: border-box;
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  width: 100%;
  border: 0;
  padding-top: 12px;
  padding-right: 0;
  padding-bottom: 12px;
  padding-left: 24px;
  background-color: transparent;
  cursor: pointer;
}

.c3:hover,
.c3:focus {
  background-color: #F5F5F5;
}

.c4 {
  position: absolute;
  top: 15px;
  left: 0;
}

<div
    className="c0 c1"
  >
    <h3
      className="c2"
    >
      <button
        aria-expanded={false}
        className="c3"
        onClick={[Function]}
        type="button"
      >
        <div
          className="c4"
        >
          <svg
            aria-hidden="true"
            className="c5"
            focusable="false"
            preserveAspectRatio="xMidYMid meet"
            role="presentation"
            viewBox="0 0 12 12"
          >
            <path
              d="M7.166 0v5h5v2h-5v5h-2V6.999L.166 7V5l5-.001V0h2z"
              fillRule="evenodd"
            />
          </svg>
        </div>
        Låg CO₂ risk
      </button>
    </h3>
    <div
      className="c6"
      hidden={true}
    >
      <p
        className="c7"
      >
        Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat
      </p>
    </div>
  </div>,
  .c5 {
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  width: 12px;
  height: 12px;
  fill: #0046FF;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  display: block;
}

.c2 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: #282823;
  margin: 0;
  font-weight: 400;
  font-size: 14px;
  line-height: 1.4285714285714286;
}

.c7 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: #6E6E69;
  margin: 0;
  font-weight: 400;
  font-size: 14px;
  line-height: 1.4285714285714286;
}

.c1 + .c0 {
  border-top: 1px solid #EBEBE8;
}

.c6 {
  padding-top: 4px;
  padding-bottom: 12px;
  padding-left: 24px;
}

.c6[hidden] {
  display: none;
}

.c3 {
  font: inherit;
  box-sizing: border-box;
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  width: 100%;
  border: 0;
  padding-top: 12px;
  padding-right: 0;
  padding-bottom: 12px;
  padding-left: 24px;
  background-color: transparent;
  cursor: pointer;
}

.c3:hover,
.c3:focus {
  background-color: #F5F5F5;
}

.c4 {
  position: absolute;
  top: 15px;
  left: 0;
}

<div
    className="c0 c1"
  >
    <h3
      className="c2"
    >
      <button
        aria-expanded={false}
        className="c3"
        onClick={[Function]}
        type="button"
      >
        <div
          className="c4"
        >
          <svg
            aria-hidden="true"
            className="c5"
            focusable="false"
            preserveAspectRatio="xMidYMid meet"
            role="presentation"
            viewBox="0 0 12 12"
          >
            <path
              d="M7.166 0v5h5v2h-5v5h-2V6.999L.166 7V5l5-.001V0h2z"
              fillRule="evenodd"
            />
          </svg>
        </div>
        Sustainability score
      </button>
    </h3>
    <div
      className="c6"
      hidden={true}
    >
      <p
        className="c7"
      >
        Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat
      </p>
    </div>
  </div>,
  .c0 {
  width: 100%;
  height: 1px;
  background-color: #EBEBE8;
}

<div
    className="c0"
  />,
  .c2 {
  display: inline-block;
  -webkit-animation: spinner 1s linear infinite;
  animation: spinner 1s linear infinite;
}

.c3 {
  display: block;
}

.c1 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: #282823;
  margin: 0;
  font-weight: 700;
  font-size: 14px;
  line-height: 1.4285714285714286;
}

.c0 {
  padding-top: 12px;
}

<div
    className="c0"
  >
    <p
      className="c1"
    >
      Did not find what you look for? ...Thats a shame. 
      <span
        className="c2"
      >
        <svg
          className="c3"
          height={16}
          viewBox="0 0 24 24"
          width={16}
        >
          <defs>
            <linearGradient
              id="spinner-shame-1"
              x1="50%"
              x2="50%"
              y1="0%"
              y2="100%"
            >
              <stop
                offset="0%"
                stopColor="#0046FF"
                stopOpacity="0"
              />
              <stop
                offset="100%"
                stopColor="#0046FF"
                stopOpacity=".5"
              />
            </linearGradient>
            <linearGradient
              id="spinner-shame-2"
              x1="50%"
              x2="50%"
              y1="0%"
              y2="100%"
            >
              <stop
                offset="0%"
                stopColor="#0046FF"
                stopOpacity=".5"
              />
              <stop
                offset="100%"
                stopColor="#0046FF"
              />
            </linearGradient>
          </defs>
          <g
            fill="none"
            fillRule="evenodd"
          >
            <path
              d="M12,0 C18.627417,0 24,5.372583 24,12 C24,18.627417 18.627417,24 12,24 M12,21 C16.9705627,21 21,16.9705627 21,12 C21,7.02943725 16.9705627,3 12,3"
              fill="url(#spinner-shame-1)"
            />
            <path
              d="M0,0 C6.627417,0 12,5.372583 12,12 C12,18.627417 6.627417,24 0,24 M0,21 C4.97056275,21 9,16.9705627 9,12 C9,7.02943725 4.97056275,3 0,3"
              fill="url(#spinner-shame-2)"
              transform="rotate(-180 6 12)"
            />
          </g>
        </svg>
      </span>
    </p>
  </div>,
]
`;
